# ippweb

./: .env.example  .gitignore  .releaserc.json  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-and-release.yml
app/: __init__.py  auth.py  config.py  cups_client.py  models.py
app/routes/: __init__.py  auth.py  jobs.py  print.py
app/services/: __init__.py  job_sync.py
app/static/: style.css
app/templates/: base.html  index.html  jobs.html  print.html  status.html
docs/: CHANGELOG.md
keycloak/: realm.json
migrations/versions/: 001_initial.py
