[project]
name = "ippweb"
version = "0.1.0"
description = "Web-based printing service using CUPS/IPP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ippweb contributors"}
]
dependencies = [
    "flask>=3.0",
    "pycups>=2.0.4",
    "python-magic>=0.4.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

# Future considerations:
# - Additional file format support (PostScript, images) can be added
# - OIDC authentication integration planned
# - Page counting and reporting features planned
# - Option filtering UI planned
